--- a/index.html
+++ b/index.html
@@ -1,67 +1,84 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
+<html lang="fr">
 
-    <h1>Hello Ethan ! Bienvenue à Eden school!</h1>
+<head>
+  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hunter Hunter</title>
+</head>
 
-    <nav>
-    <a href="#int">l'intégration</a>
-    <a href="#dev">le développement</a>
-    <a href="#css">un peu de CSS</a>
-    </nav>
+<body>
 
-    <h2>Au cours de cette année nous allons avoir 2 matières:</h2>
-    <h3 id="int">L'integration</h3>
-    <h4>Le HTML:</h4>
+  <nav class="nav">
+    <img class="logo" src="img/logo.png" alt="img">
+    <a class="liens" href="#">item 1</a>
+    <a class="liens" href="#">item 2</a>
+    <a class="liens" href="#">item 3</a>
+  </nav>
 
-    <img src="images\html.png" 
-    alt="images">
+  <main class="main">
+    <section>
+      <div class="section_titre">
+        <img class="hand" src="img/hand-peace-solid.svg" alt="img">
+        <h2 class="titre">HUNTER X HUNTER</h2>
+      </div>
 
-    <h5>Le HTML sert à créer le contenu et la structure du site:
-      elle va contenir uniquement la partie textuelle du site</h5>
+      <img class="images" src="img/hxh1.png" alt="img">
+      <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum provident natus qui odit, sapiente
+        id
+        ducimus
+        inventore, quaerat, blanditiis magni dicta eius? Aliquid odit dolores delectus recusandae repudiandae nemo
+        facilis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, qui nemo, quo veritatis quisquam,
+        voluptatem cupiditate ducimus impedit modi aliquid eos. Perferendis ratione ab fugit fugiat recusandae aut a!
+        Iure? Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quasi qui quidem corrupti assumenda
+        laudantium accusamus magni quae! Earum aut quam praesentium perspiciatis reprehenderit ratione aspernatur
+        incidunt
+        hic corporis sint.<br><br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ipsam quae culpa neque sapiente eaque velit dicta
+        in
+        inventore vero error dolorum ea, repudiandae illo aperiam quo iure natus iusto? Lorem, ipsum dolor sit amet
+        consectetur adipisicing elit. Doloremque officiis autem error perspiciatis, sequi minus cum optio, eveniet
+        corporis deleniti numquam dignissimos enim dicta illum exercitationem fuga, recusandae debitis ipsa.</p>
+      <div class="position_button">
+        <button class="button">Read more</button>
+      </div>
+    </section>
 
-    <img src="images\css.jpg" 
-    alt="images">
+    <section>
+      <div class="section_titre">
+        <img class="hand" src="img/hand-peace-solid.svg" alt="img">
+        <h2 class="titre">AND HUNTER X HUNTER</h2>
+      </div>
 
-    <h5>Le CSS va nous permettre d'ajouter une mise en forme à notre site :
-       les couleurs, les formes, le fond, etc.</h5>
-    <h3 id="dev">Le développement</h3>
-    <h4>Le javascript:</h4>
-
-    <img src="images\js.jpg" 
-    alt="images">
-
-    <h5>Javascript est un langage de programmation de script employé pour rendre une page web interactive.
-       Le comportement de la page et son apparence pourront varier en fonction de certains paramètres.</h5>
-     <hr>
-
-     <h2 id="css">Et ici, nous allons un peu jouer avec la CSS !</h2>
-
-     <div class="police1">
-     <h3>Les couleurs du texte : Et ma police est Arial !</h3>
-
-    <h4 class="txtR">Ce paragraphe est rouge.</h4>
-    <h4 class="txtB">Ce paragraphe est bleu.</h4>
-    <h4 class="txtV">Ce paragraphe est vert.</h4>
-  </div>
-
-  <section class="police2">
-    <h3>Les couleurs de fond : Et ma police est cursive !</h3>
-
-    <h4 class="back1">Ce paragraphe est rouge.</h4>
-    <h4 class="back2">Ce paragraphe est bleu.</h4>
-    <h4 class="back3">Ce paragraphe est vert.</h4>
-  </section>
+      <img class="images" src="img/hxh2.png" alt="img">
+      <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum provident natus qui odit, sapiente
+        id
+        ducimus
+        inventore, quaerat, blanditiis magni dicta eius? Aliquid odit dolores delectus recusandae repudiandae nemo
+        facilis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, qui nemo, quo veritatis quisquam,
+        voluptatem cupiditate ducimus impedit modi aliquid eos. Perferendis ratione ab fugit fugiat recusandae aut a!
+        Iure? Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quasi qui quidem corrupti assumenda
+        laudantium accusamus magni quae! Earum aut quam praesentium perspiciatis reprehenderit ratione aspernatur
+        incidunt
+        hic corporis sint.<br><br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ipsam quae culpa neque sapiente eaque velit dicta
+        in
+        inventore vero error dolorum ea, repudiandae illo aperiam quo iure natus iusto? Lorem, ipsum dolor sit amet
+        consectetur adipisicing elit. Doloremque officiis autem error perspiciatis, sequi minus cum optio, eveniet
+        corporis deleniti numquam dignissimos enim dicta illum exercitationem fuga, recusandae debitis ipsa.</p>
+      <div class="position_button">
+        <button class="button">Read more</button>
+      </div>
+    </section>
+  </main>
 
   <footer class="footer">
-    <img src="images/logovert.png" alt="images">
-    <p>copyright Eden School</p>
+    <img class="eden_school" src="img/logovert.png" alt="img">
+    <p class="copyright">copyright Eden School</p>
   </footer>
-  </body>
+
+  <script type="module" src="/main.js"></script>
+</body>
+
 </html>
