--- a/index.html
+++ b/index.html
@@ -1,67 +1,213 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
+<html lang="fr">
 
-    <h1>Hello Ethan ! Bienvenue à Eden school!</h1>
+<head>
+  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Salle de Sport Suite</title>
+</head>
 
+<body>
+
+  <header>
     <nav>
-    <a href="#int">l'intégration</a>
-    <a href="#dev">le développement</a>
-    <a href="#css">un peu de CSS</a>
+      <div class="liens">
+        <img class="img_liens" src="img/fire-solid.svg" alt="img">
+        <a class="text_liens" href="#">Coaching</a>
+      </div>
+      <div class="liens">
+        <img class="img_liens" src="img/gears-solid.svg" alt="img">
+        <a class="text_liens" href="#">Formules</a>
+      </div>
+      <div class="liens">
+        <img class="img_liens" src="img/hand-spock-solid.svg" alt="img">
+        <a class="text_liens" href="#">Je m'abonne</a>
+      </div>
     </nav>
+    <h3 class="mois_gratuit">La rentrée fitness <span class="text_blanc">1 mois gratuit !</span></h3>
 
-    <h2>Au cours de cette année nous allons avoir 2 matières:</h2>
-    <h3 id="int">L'integration</h3>
-    <h4>Le HTML:</h4>
+    <section class="section_titre">
+      <h1 class="sport_factory">Sport Factory</h1>
+      <h2 class="salle_de_sport">Salle de sport</h2>
+    </section>
+  </header>
 
-    <img src="images\html.png" 
-    alt="images">
+  <section class="section_horaires">
+    <h2 class="titre">Réserver votre place pour le</h2>
+    <h3 class="text_sou_titre">prochain cours</h3>
 
-    <h5>Le HTML sert à créer le contenu et la structure du site:
-      elle va contenir uniquement la partie textuelle du site</h5>
+    <article class="article_horaires">
+      <table class="table">
+        <th class="table_titre">Lyon 6 - Foch</th>
+      </table>
 
-    <img src="images\css.jpg" 
-    alt="images">
+      <div class="position_date">
+      <table class="date_horraire">
+        <th class="date">05 Janvier 2021</th>
+        <th class="date h">15h30</th>
+      </table>
+      <button class="bouton_reserver">Réserver ce créneau</button>
+    </div>
 
-    <h5>Le CSS va nous permettre d'ajouter une mise en forme à notre site :
-       les couleurs, les formes, le fond, etc.</h5>
-    <h3 id="dev">Le développement</h3>
-    <h4>Le javascript:</h4>
+      <div class="position_date">
+      <table class="date_horraire_blanc">
+        <th class="date">10 janvier 2021</th>
+        <th class="date h">16h30</th>
+      </table>
+      <button class="bouton_reserver">Réserver ce créneau</button>
+    </div>
 
-    <img src="images\js.jpg" 
-    alt="images">
+      <div class="position_date">
+      <table class="date_horraire">
+        <th class="date">15 Janvier 2021</th>
+        <th class="date h">15h30</th>
+      </table>
+      <button class="bouton_reserver">Réserver ce créneau</button>
+    </div>
 
-    <h5>Javascript est un langage de programmation de script employé pour rendre une page web interactive.
-       Le comportement de la page et son apparence pourront varier en fonction de certains paramètres.</h5>
-     <hr>
+      <div class="position_date">
+      <table class="date_horraire_blanc">
+        <th class="date">20 Janvier 2021</th>
+        <th class="date h">16h30</th>
+      </table>
+      <button class="bouton_reserver">Réserver ce créneau</button>
+    </div>
+    </article>
 
-     <h2 id="css">Et ici, nous allons un peu jouer avec la CSS !</h2>
+    <article class="article_horaires">
+      <table class="table">
+        <th class="table_titre">Lyon 5 - Vieux Lyon</th>
+      </table>
 
-     <div class="police1">
-     <h3>Les couleurs du texte : Et ma police est Arial !</h3>
+      <div class="position_date">
+      <table class="date_horraire">
+        <th class="date">05 Janvier 2021</th>
+        <th class="date h">15h30</th>
+      </table>
+      <button class="bouton_reserver">Réserver ce créneau</button>
+    </div>
 
-    <h4 class="txtR">Ce paragraphe est rouge.</h4>
-    <h4 class="txtB">Ce paragraphe est bleu.</h4>
-    <h4 class="txtV">Ce paragraphe est vert.</h4>
-  </div>
+      <div class="position_date">
+      <table class="date_horraire_blanc">
+        <th class="date">10 janvier 2021</th>
+        <th class="date h">16h30</th>
+      </table>
+      <button class="bouton_reserver">Réserver ce créneau</button>
+    </div>
 
-  <section class="police2">
-    <h3>Les couleurs de fond : Et ma police est cursive !</h3>
+      <div class="position_date">
+      <table class="date_horraire">
+        <th class="date">15 Janvier 2021</th>
+        <th class="date h">15h30</th>
+      </table>
+      <button class="bouton_reserver">Réserver ce créneau</button>
+    </div>
 
-    <h4 class="back1">Ce paragraphe est rouge.</h4>
-    <h4 class="back2">Ce paragraphe est bleu.</h4>
-    <h4 class="back3">Ce paragraphe est vert.</h4>
+      <div class="position_date">
+      <table class="date_horraire_blanc">
+        <th class="date">20 Janvier 2021</th>
+        <th class="date h">16h30</th>
+      </table>
+      <button class="bouton_reserver">Réserver ce créneau</button>
+    </div>
+    </article>
+
+    <article class="article_horaires">
+      <table class="table">
+        <th class="table_titre">Lyon 2 - Bellecour</th>
+      </table>
+
+      <div class="position_date">
+      <table class="date_horraire">
+        <th class="date">05 Janvier 2021</th>
+        <th class="date h">15h30</th>
+      </table>
+      <button class="bouton_reserver">Réserver ce créneau</button>
+    </div>
+
+      <div class="position_date">
+      <table class="date_horraire_blanc">
+        <th class="date">10 janvier 2021</th>
+        <th class="date h">16h30</th>
+      </table>
+      <button class="bouton_reserver">Réserver ce créneau</button>
+    </div>
+
+      <div class="position_date">
+      <table class="date_horraire">
+        <th class="date">15 Janvier 2021</th>
+        <th class="date h">15h30</th>
+      </table>
+      <button class="bouton_reserver">Réserver ce créneau</button>
+    </div>
+
+      <div class="position_date">
+      <table class="date_horraire_blanc">
+        <th class="date">20 Janvier 2021</th>
+        <th class="date h">16h30</th>
+      </table>
+      <button class="bouton_reserver">Réserver ce créneau</button>
+    </div>
+    </article>
+
   </section>
 
-  <footer class="footer">
-    <img src="images/logovert.png" alt="images">
+  <section class="section_reservation">
+    <h2 class="titre">Pour valider votre réservation,</h2>
+    <h3 class="text_sou_titre">compléter ce formulaire</h3>
+
+    <fieldset class="groupe">
+      <legend class="groupe_name">Vos coordonnées</legend>
+      <label class="text_reservation">Votre prénom:</label>
+      <input class="input_coordonnees" type="text">
+
+      <label class="text_reservation">Votre nom:</label>
+      <input class="input_coordonnees" type="text">
+
+      <label class="text_reservation">Votre email:</label>
+      <input class="input_coordonnees" type="email" name="email">
+    </fieldset>
+
+    <fieldset class="groupe">
+      <legend class="groupe_name">Quelles sont les raisons de votre venue ?</legend>
+      <label class="text_reservation">Besoin de me détendre</label>
+      <input class="cases" type="checkbox">
+
+      <label class="text_reservation">Mon médecin m'a conseillé de venir</label>
+      <input class="cases" type="checkbox">
+
+      <label class="text_reservation">Je veux tester avec des amis</label>
+      <input class="cases" type="checkbox">
+    </fieldset>
+
+    <fieldset class="groupe">
+      <legend class="groupe_name">Voulez-vous souscrire à notre programme de fidélité ?</legend>
+      <label class="text_reservation">Oui</label>
+      <input class="radio" type="radio" name="drone">
+
+      <label class="text_reservation">Non</label>
+      <input class="radio" type="radio" name="drone">
+    </fieldset>
+
+    <fieldset class="groupe">
+      <legend class="groupe_name">Comment avez-vous connu le Yoga ?</legend>
+      <select class="selector">
+        <option>Par internet</option>
+      </select>
+    </fieldset>
+
+    <div class="position_envoyer">
+      <input class="envoyer" type="button" value="Envoyer">
+    </div>
+  </section>
+
+  <footer>
+    <img class="eden_school" src="img/logovert.png" alt="img">
     <p>copyright Eden School</p>
   </footer>
-  </body>
+
+  <script type="module" src="/main.js"></script>
+</body>
+
 </html>
