--- a/index.html
+++ b/index.html
@@ -1,67 +1,150 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
+<html lang="fr">
 
-    <h1>Hello Ethan ! Bienvenue à Eden school!</h1>
+<head>
+  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Les Batteurs</title>
+</head>
+
+<body>
+  <!-- HEADER -->
+  <header>
+    <img class="logo" src="img/les_batteurs.jpg" alt="logo">
 
     <nav>
-    <a href="#int">l'intégration</a>
-    <a href="#dev">le développement</a>
-    <a href="#css">un peu de CSS</a>
+      <ul>
+        <li><a href="#">Pop batteurs</a></li>
+        <li><a href="#">Battries mystiques</a></li>
+        <li><a href="#">Batteurs geeks</a></li>
+      </ul>
     </nav>
+  </header>
 
-    <h2>Au cours de cette année nous allons avoir 2 matières:</h2>
-    <h3 id="int">L'integration</h3>
-    <h4>Le HTML:</h4>
+  <!-- MAIN -->
+  <main>
+    <section class="section_purple">
+      <h1>LES 3 MEILLEURS BATTEURS DU MONDE ET LEURS SOLOS INOUBLIABLES</h1>
+      <hr>
+      <p class="paragraphe_white">
+        Ils font palpiter la musique et les coeurs de ceux qui l'écoutent. Les
+        batteurs, traditionnellement installés à l'arrière de la scène, sont
+        pourtant l'essence même de la musique : le rythme. Un tempo qui peut
+        se faire très speed, très puissant dans les genres musicaux que nous
+        avons choisi d'aborder aujourd'hui : le rock, le hard rock et leurs
+        enfants. Voici notre sélection des meilleurs batteurs de tous les
+        temps. La liste ne peut être exhaustive, et si vous considérez qu'elle
+        peut-être améliorée, n'hésitez pas à nous signaler vos héros des
+        baguettes !
+      </p>
+      <img class="img_battries img_mobile" src="img/drumrollin-mobile.jpg" alt="joueur de battries">
+      <img class="img_battries img_tablette" src="img/drumrollin-tablette.gif" alt="joueur de battries">
+      <img class="img_battries img_desktop" src="img/drumrollin-desktop.jpg" alt="joueur de battries">
 
-    <img src="images\html.png" 
-    alt="images">
+      <article>
+        <h2 class="titre_section_purple">JOHN BONHAM</h2>
+        <hr>
+        <p class="paragraphe_white">
+          Un sacré bonhomme, ce Bonham. John Bonham, alias Bonzo, génie
+          enchaîné, déchaîné, à ses fûts, a fait les plus belles heures des
+          lives de "Led Zeppelin". Exemple, ce morceau de bravoure sur "Moby
+          Dick" au Royal Albert Hall en 1970. Sur cette performance purement
+          bluffante (mais juste à titre d’exemple !), il frappe même les peaux
+          à mains nues. Erigé au rang de "meilleur batteur de tous les temps"
+          par le lectorat de "Rolling Stone" en 1973, ce natif du
+          Worcestershire, mort à seulement 32 ans, reste une référence pour
+          tous les amateurs de (très) bonnes baguettes.
+        </p>
+        <iframe class="videos_section_purple" width="560" height="315" src="https://www.youtube.com/embed/UOSf9f5_qZ8" title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </article>
 
-    <h5>Le HTML sert à créer le contenu et la structure du site:
-      elle va contenir uniquement la partie textuelle du site</h5>
+      <article>
+        <h2 class="titre_section_purple">KEITH MOON</h2>
+        <hr>
+        <p class="paragraphe_white">
+          Au cas (improbable) où vous n’auriez jamais entendu parler des
+          "Who", honte à vous car vous ne regardez même pas les Experts.
+          Volontairement, nous avons choisi le titre (devenu générique
+          emblématique de la série) "Who are you" de la bande de Roger
+          Daltrey. Voici deux vidéos, dont l’une isole l’enregistrement de
+          l’intro et du groove de feu le diaboliquement talentueux Keith Moon.
+          De quoi donner une petite idée de la sauvage virtuosité de celui qui
+          a inspiré Animal, le batteur survolté du Muppet Show.
+        </p>
+        <iframe class="videos_section_purple" width="560" height="315" src="https://www.youtube.com/embed/vCupJpymgfE" title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </article>
 
-    <img src="images\css.jpg" 
-    alt="images">
+      <article>
+        <h2 class="titre_section_purple">PHIL RUDD</h2>
+        <hr>
+        <p class="paragraphe_white">
+          Précis, puissant, généreux dans son style et énorme dans son groove,
+          Phil Rudd est l’un des sales gosses qui ont fait le succès
+          d'"AC/DC". L’Australien d’aujourd’hui 62 ans a certes eu des
+          problèmes avec Malcolm Young mais sa participation à la bande
+          emblématique du hard rock aura été déterminante.
+        </p>
+        <iframe class="videos_section_purple" width="560" height="315" src="https://www.youtube.com/embed/0-xuzM4iq_g" title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </article>
+    </section>
 
-    <h5>Le CSS va nous permettre d'ajouter une mise en forme à notre site :
-       les couleurs, les formes, le fond, etc.</h5>
-    <h3 id="dev">Le développement</h3>
-    <h4>Le javascript:</h4>
+    <!-- AUTRES -->
 
-    <img src="images\js.jpg" 
-    alt="images">
+    <section class="section_orange">
+      <article>
+        <h2 class="titre_section_orange">Ginger Baker</h2>
+        <p class="paragraphe_black">Attention, culte. "Cream" qui outre un certain Eric Clapton et Jack Bruce, tenait un
+          sacré batteur en la personne de Ginger Baker nous a légué "Sunshine of your love" (1977) où, sans doute,
+          l’homme derrière ses percussions, souvent novatrices pour l’époque, était au sommet de son art. Le Britannique
+          a ensuite rejoint "Blind Faith" (toujours avec Clapton), puis créé la formation de jazz-rock "Ginger Baker’s
+          Air Force" et a notamment collaboré avec Fela Kuti.</p>
+        <iframe class="videos_section_orange" width="560" height="315" src="https://www.youtube.com/embed/hIMIMSb9mpc" title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </article>
+      <article>
+        <h2 class="titre_section_orange">Ringo Starr</h2>
+        <p class="paragraphe_black">Parmi les Fab Four, il n’est (tout étant relatif) certainement pas le premier qui
+          viendra à l’esprit du grand public, mais Ringo Starr fut un sacrément bel atout du quatuor historique. Que
+          serait, par exemple, "Come together" sans son sens animal du tempo ? Et l’on ne peut nier qu’il a contribué à
+          l’évolution du style des "Beatles".</p>
+        <iframe class="videos_section_orange" width="560" height="315" src="https://www.youtube.com/embed/MhqpEYmH-fo" title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </article>
+      <article>
+        <h2 class="titre_section_orange">Dave Grohl</h2>
+        <p class="paragraphe_black">C'est pas drôle. Dave Grohl est si bien dans ses pompes de musicien que, de retour
+          de concert, il vous donne envie de brûler vos instruments. Alors qu'il maîtrise déjà la guitare, la basse, le
+          piano et chante (tant qu'à faire...), il est avant tout reconnu comme un batteur de folie. Cet autodidacte (du
+          moins en ce qui concerne les bases des percussions) ultra-doué a donné toute leur puissance de feu à
+          "Nirvana", "Queens of the stone age" ou encore "Them crooked vultures" (passons sur ses nombreuses
+          collaborations et le fait qu'il a tout bêtement créé les "Foo fighters" !).</p>
+        <iframe class="videos_section_orange" width="560" height="315" src="https://www.youtube.com/embed/e27dqYb6B3w" title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </article>
+    </section>
+  </main>
 
-    <h5>Javascript est un langage de programmation de script employé pour rendre une page web interactive.
-       Le comportement de la page et son apparence pourront varier en fonction de certains paramètres.</h5>
-     <hr>
-
-     <h2 id="css">Et ici, nous allons un peu jouer avec la CSS !</h2>
-
-     <div class="police1">
-     <h3>Les couleurs du texte : Et ma police est Arial !</h3>
-
-    <h4 class="txtR">Ce paragraphe est rouge.</h4>
-    <h4 class="txtB">Ce paragraphe est bleu.</h4>
-    <h4 class="txtV">Ce paragraphe est vert.</h4>
-  </div>
-
-  <section class="police2">
-    <h3>Les couleurs de fond : Et ma police est cursive !</h3>
-
-    <h4 class="back1">Ce paragraphe est rouge.</h4>
-    <h4 class="back2">Ce paragraphe est bleu.</h4>
-    <h4 class="back3">Ce paragraphe est vert.</h4>
-  </section>
-
-  <footer class="footer">
-    <img src="images/logovert.png" alt="images">
-    <p>copyright Eden School</p>
+  <!-- FOOTER -->
+  <footer>
+    <img class="eden_school" src="img/logovert.png" alt="eden school">
+    <h5>copyright eden school</h5>
+    <p class="source">
+      source : VIDEOS.Les 3 meilleurs batteurs du monde et leurs solo
+      inoubliables - NouvelObs - Par Jean-Frédéric Tronche
+    </p>
   </footer>
-  </body>
+
+  <script type="module" src="/main.js"></script>
+</body>
+
 </html>
