--- a/index.html
+++ b/index.html
@@ -1,67 +1,276 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
+<html lang="zxx">
 
-    <h1>Hello Ethan ! Bienvenue à Eden school!</h1>
+<head>
+  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RAP</title>
+</head>
 
+<body>
+
+  <!-- HEADER NAV -->
+  <header>
     <nav>
-    <a href="#int">l'intégration</a>
-    <a href="#dev">le développement</a>
-    <a href="#css">un peu de CSS</a>
+      <div class="position_titre">
+        <img class="logo" src="img/logo.svg" alt="logo">
+        <h1>rap & drill</h1>
+      </div>
+      <ul>
+        <li><a href="#"><img class="img_nav" src="img/house-solid.svg" alt="accueil">accueil</a></li>
+        <li><a href="#"><img class="img_nav" src="img/volume-high-solid.svg" alt="song">le rap ici</a></li>
+        <li><a href="#"><img class="img_nav" src="img/volume-high-solid.svg" alt="song">et le drill la</a></li>
+      </ul>
     </nav>
+    <div class="fond_header">
+      <h2 class="titre_header">** le rap, musique numéro 1 du xxième siècle **</h2>
+      <p>2020. Ninho est n°1 des ventes de disques, PNL est tête d'affiche dan les plus gros
+        festivals français, jul est
+        le deuxième plus gros vendeur de l'histoire après... Johnny Hallyday.</p>
+      <a class="lien_header" href="#">J'y vais !</a>
+    </div>
+  </header>
 
-    <h2>Au cours de cette année nous allons avoir 2 matières:</h2>
-    <h3 id="int">L'integration</h3>
-    <h4>Le HTML:</h4>
+  <!-- MAIN -->
+  <main>
+    <!-- RAPPEURS -->
+    <h2 class="titre_main">** mes rappeurs préférés **</h2>
+    <hr>
 
-    <img src="images\html.png" 
-    alt="images">
+    <section class="position_flex">
+      <article class="article_rappeurs">
+        <img class="img_rappeurs" src="img/rappeurs/jul.png" alt="jul">
+        <h2 class="titre_article">jul</h2>
+        <a class="twitter" href="#">twitter : @jul</a>
+      </article>
 
-    <h5>Le HTML sert à créer le contenu et la structure du site:
-      elle va contenir uniquement la partie textuelle du site</h5>
+      <article class="article_rappeurs">
+        <img class="img_rappeurs" src="img/rappeurs/ninho.png" alt="ninho">
+        <h2 class="titre_article">ninho</h2>
+        <a class="twitter" href="#">twitter : @ninhosdt</a>
+      </article>
 
-    <img src="images\css.jpg" 
-    alt="images">
+      <article class="article_rappeurs">
+        <img class="img_rappeurs" src="img/rappeurs/pnl.png" alt="pnl">
+        <h2 class="titre_article">pnl</h2>
+        <a class="twitter" href="#">twitter : @PNLMusic</a>
+      </article>
+    </section>
 
-    <h5>Le CSS va nous permettre d'ajouter une mise en forme à notre site :
-       les couleurs, les formes, le fond, etc.</h5>
-    <h3 id="dev">Le développement</h3>
-    <h4>Le javascript:</h4>
+    <!-- PLAYLISTS -->
+    <h2 class="titre_main">** mes playlists **</h2>
+    <hr>
 
-    <img src="images\js.jpg" 
-    alt="images">
+    <section class="position_flex">
+      <article class="article_playlists">
+        <div class="cercle_img_playlists">
+          <img class="img_playlists" src="img/podcast-solid.svg" alt="podcast">
+        </div>
+        <h2 class="titre_article">podcast</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam quaerat illum fugit, doloremque quia vitae
+          maxime reiciendis velit voluptatum rerum at voluptatibus sapiente consectetur quod, nam, eum neque a mollitia!
+        </p>
+      </article>
 
-    <h5>Javascript est un langage de programmation de script employé pour rendre une page web interactive.
-       Le comportement de la page et son apparence pourront varier en fonction de certains paramètres.</h5>
-     <hr>
+      <article class="article_playlists">
+        <div class="cercle_img_playlists">
+          <img class="img_playlists" src="img/soundcloud.svg" alt="podcast">
+        </div>
+        <h2 class="titre_article">soundcloud</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam quaerat illum fugit, doloremque quia vitae
+          maxime reiciendis velit voluptatum rerum at voluptatibus sapiente consectetur quod, nam, eum neque a mollitia!
+        </p>
+      </article>
 
-     <h2 id="css">Et ici, nous allons un peu jouer avec la CSS !</h2>
+      <article class="article_playlists">
+        <div class="cercle_img_playlists">
+          <img class="img_playlists" src="img/spotify.svg" alt="podcast">
+        </div>
+        <h2 class="titre_article">spotifiy</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam quaerat illum fugit, doloremque quia vitae
+          maxime reiciendis velit voluptatum rerum at voluptatibus sapiente consectetur quod, nam, eum neque a mollitia!
+        </p>
+      </article>
+    </section>
 
-     <div class="police1">
-     <h3>Les couleurs du texte : Et ma police est Arial !</h3>
+    <!-- AVIS -->
+    <h2 class="titre_main">** mon avis sur les rappeurs et leurs raps géniaux **</h2>
+    <hr>
 
-    <h4 class="txtR">Ce paragraphe est rouge.</h4>
-    <h4 class="txtB">Ce paragraphe est bleu.</h4>
-    <h4 class="txtV">Ce paragraphe est vert.</h4>
-  </div>
+    <section>
+      <h2 class="titre_article_avis">plk : c'ets mort</h2>
+      <article class="article_avis">
+        <img class="img_right" src="img/rap.gif" alt="rap">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum, temporibus, sit cupiditate libero quisquam
+          architecto excepturi exercitationem velit voluptates saepe beatae omnis explicabo quis, voluptate nam animi
+          modi sed sint.
+          Commodi maiores harum quae nam ducimus, soluta ullam accusantium libero beatae numquam, omnis eligendi dolore
+          quos quidem vero maxime eum ratione porro explicabo quasi. At repellat natus blanditiis perferendis mollitia.
+          Cupiditate reprehenderit delectus, mollitia dolor hic porro aliquam sapiente reiciendis architecto minima
+          beatae nostrum inventore, necessitatibus, rerum quisquam unde aut recusandae excepturi voluptatum. Animi
+          voluptates ipsum quia quod dolorum deserunt!
+          Ab non vel, labore est, natus similique accusantium ipsa saepe nobis tempora praesentium laudantium
+          voluptates? Repudiandae fuga aliquid sint maxime a. In necessitatibus aliquid quo, sapiente dolore suscipit at
+          repellat?
+          Repudiandae doloribus nulla nemo officia debitis iusto tempore magni. Doloremque nemo amet mollitia aliquid
+          sit voluptatum enim totam, modi ducimus ex tempore non placeat, praesentium corrupti veritatis distinctio
+          dicta odit!
+          Vitae aliquid praesentium ab voluptatibus itaque ipsum error vero assumenda, eaque non voluptate. Numquam
+          tempore repellendus laborum eligendi deserunt ducimus, maxime officia amet. Sequi ipsa officia sint officiis
+          sit aspernatur.
+          At voluptate dolores provident beatae ratione enim nisi accusamus, delectus minus porro libero eaque placeat
+          quas, perspiciatis, veritatis excepturi. Reiciendis corrupti dicta voluptatum suscipit asperiores tempora
+          nihil, quod vel fugiat?
+          Perspiciatis iure optio officiis dolorum tenetur! Voluptatibus harum, aliquid nobis labore nam ipsum
+          repudiandae sed! Ab praesentium cupiditate, amet numquam, ducimus iusto aspernatur ullam voluptatem suscipit
+          facilis cumque optio maiores.</p>
+        <div class="bouton_partager"><a class="partager" href="#">partager c'est sympas </a><img class="img_partager"
+            src="img/volume-high-solid-white.svg" alt="sound"></div>
+      </article>
 
-  <section class="police2">
-    <h3>Les couleurs de fond : Et ma police est cursive !</h3>
+      <h2 class="titre_article_avis">plk : c'ets mort</h2>
+      <article class="article_avis">
+        <img class="img_left" src="img/fond.gif" alt="fond">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum, temporibus, sit cupiditate libero quisquam
+          architecto excepturi exercitationem velit voluptates saepe beatae omnis explicabo quis, voluptate nam animi
+          modi sed sint.
+          Commodi maiores harum quae nam ducimus, soluta ullam accusantium libero beatae numquam, omnis eligendi dolore
+          quos quidem vero maxime eum ratione porro explicabo quasi. At repellat natus blanditiis perferendis mollitia.
+          Cupiditate reprehenderit delectus, mollitia dolor hic porro aliquam sapiente reiciendis architecto minima
+          beatae nostrum inventore, necessitatibus, rerum quisquam unde aut recusandae excepturi voluptatum. Animi
+          voluptates ipsum quia quod dolorum deserunt!
+          Ab non vel, labore est, natus similique accusantium ipsa saepe nobis tempora praesentium laudantium
+          voluptates? Repudiandae fuga aliquid sint maxime a. In necessitatibus aliquid quo, sapiente dolore suscipit at
+          repellat?
+          Repudiandae doloribus nulla nemo officia debitis iusto tempore magni. Doloremque nemo amet mollitia aliquid
+          sit voluptatum enim totam, modi ducimus ex tempore non placeat, praesentium corrupti veritatis distinctio
+          dicta odit!
+          Vitae aliquid praesentium ab voluptatibus itaque ipsum error vero assumenda, eaque non voluptate. Numquam
+          tempore repellendus laborum eligendi deserunt ducimus, maxime officia amet. Sequi ipsa officia sint officiis
+          sit aspernatur.
+          At voluptate dolores provident beatae ratione enim nisi accusamus, delectus minus porro libero eaque placeat
+          quas, perspiciatis, veritatis excepturi. Reiciendis corrupti dicta voluptatum suscipit asperiores tempora
+          nihil, quod vel fugiat?
+          Perspiciatis iure optio officiis dolorum tenetur! Voluptatibus harum, aliquid nobis labore nam ipsum
+          repudiandae sed! Ab praesentium cupiditate, amet numquam, ducimus iusto aspernatur ullam voluptatem suscipit
+          facilis cumque optio maiores.</p>
+        <div class="bouton_partager"><a class="partager" href="#">partager c'est sympas </a><img class="img_partager"
+            src="img/volume-high-solid-white.svg" alt="sound"></div>
+      </article>
 
-    <h4 class="back1">Ce paragraphe est rouge.</h4>
-    <h4 class="back2">Ce paragraphe est bleu.</h4>
-    <h4 class="back3">Ce paragraphe est vert.</h4>
-  </section>
+      <h2 class="titre_article_avis">plk : c'ets mort</h2>
+      <article class="article_avis">
+        <img class="img_right" src="img/rap.gif" alt="rap">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum, temporibus, sit cupiditate libero quisquam
+          architecto excepturi exercitationem velit voluptates saepe beatae omnis explicabo quis, voluptate nam animi
+          modi sed sint.
+          Commodi maiores harum quae nam ducimus, soluta ullam accusantium libero beatae numquam, omnis eligendi dolore
+          quos quidem vero maxime eum ratione porro explicabo quasi. At repellat natus blanditiis perferendis mollitia.
+          Cupiditate reprehenderit delectus, mollitia dolor hic porro aliquam sapiente reiciendis architecto minima
+          beatae nostrum inventore, necessitatibus, rerum quisquam unde aut recusandae excepturi voluptatum. Animi
+          voluptates ipsum quia quod dolorum deserunt!
+          Ab non vel, labore est, natus similique accusantium ipsa saepe nobis tempora praesentium laudantium
+          voluptates? Repudiandae fuga aliquid sint maxime a. In necessitatibus aliquid quo, sapiente dolore suscipit at
+          repellat?
+          Repudiandae doloribus nulla nemo officia debitis iusto tempore magni. Doloremque nemo amet mollitia aliquid
+          sit voluptatum enim totam, modi ducimus ex tempore non placeat, praesentium corrupti veritatis distinctio
+          dicta odit!
+          Vitae aliquid praesentium ab voluptatibus itaque ipsum error vero assumenda, eaque non voluptate. Numquam
+          tempore repellendus laborum eligendi deserunt ducimus, maxime officia amet. Sequi ipsa officia sint officiis
+          sit aspernatur.
+          At voluptate dolores provident beatae ratione enim nisi accusamus, delectus minus porro libero eaque placeat
+          quas, perspiciatis, veritatis excepturi. Reiciendis corrupti dicta voluptatum suscipit asperiores tempora
+          nihil, quod vel fugiat?
+          Perspiciatis iure optio officiis dolorum tenetur! Voluptatibus harum, aliquid nobis labore nam ipsum
+          repudiandae sed! Ab praesentium cupiditate, amet numquam, ducimus iusto aspernatur ullam voluptatem suscipit
+          facilis cumque optio maiores.</p>
+        <div class="bouton_partager"><a class="partager" href="#">partager c'est sympas </a><img class="img_partager"
+            src="img/volume-high-solid-white.svg" alt="sound"></div>
+      </article>
 
-  <footer class="footer">
-    <img src="images/logovert.png" alt="images">
+      <h2 class="titre_article_avis">plk : c'ets mort</h2>
+      <article class="article_avis">
+        <img class="img_left" src="img/fond.gif" alt="fond">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum, temporibus, sit cupiditate libero quisquam
+          architecto excepturi exercitationem velit voluptates saepe beatae omnis explicabo quis, voluptate nam animi
+          modi sed sint.
+          Commodi maiores harum quae nam ducimus, soluta ullam accusantium libero beatae numquam, omnis eligendi dolore
+          quos quidem vero maxime eum ratione porro explicabo quasi. At repellat natus blanditiis perferendis mollitia.
+          Cupiditate reprehenderit delectus, mollitia dolor hic porro aliquam sapiente reiciendis architecto minima
+          beatae nostrum inventore, necessitatibus, rerum quisquam unde aut recusandae excepturi voluptatum. Animi
+          voluptates ipsum quia quod dolorum deserunt!
+          Ab non vel, labore est, natus similique accusantium ipsa saepe nobis tempora praesentium laudantium
+          voluptates? Repudiandae fuga aliquid sint maxime a. In necessitatibus aliquid quo, sapiente dolore suscipit at
+          repellat?
+          Repudiandae doloribus nulla nemo officia debitis iusto tempore magni. Doloremque nemo amet mollitia aliquid
+          sit voluptatum enim totam, modi ducimus ex tempore non placeat, praesentium corrupti veritatis distinctio
+          dicta odit!
+          Vitae aliquid praesentium ab voluptatibus itaque ipsum error vero assumenda, eaque non voluptate. Numquam
+          tempore repellendus laborum eligendi deserunt ducimus, maxime officia amet. Sequi ipsa officia sint officiis
+          sit aspernatur.
+          At voluptate dolores provident beatae ratione enim nisi accusamus, delectus minus porro libero eaque placeat
+          quas, perspiciatis, veritatis excepturi. Reiciendis corrupti dicta voluptatum suscipit asperiores tempora
+          nihil, quod vel fugiat?
+          Perspiciatis iure optio officiis dolorum tenetur! Voluptatibus harum, aliquid nobis labore nam ipsum
+          repudiandae sed! Ab praesentium cupiditate, amet numquam, ducimus iusto aspernatur ullam voluptatem suscipit
+          facilis cumque optio maiores.</p>
+        <div class="bouton_partager"><a class="partager" href="#">partager c'est sympas </a><img class="img_partager"
+            src="img/volume-high-solid-white.svg" alt="sound"></div>
+      </article>
+    </section>
+
+    <!-- FORM -->
+    <h2 class="titre_main">** contacte-moi, je peux en parler plus! **</h2>
+    <hr>
+
+    <form>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non quas voluptates beatae nemo, possimus maiores aut
+        ducimus consequatur distinctio facilis tempora, ipsam aperiam deleniti, rem esse quaerat! Accusantium, repellat
+        soluta?
+        Deserunt accusamus sunt cupiditate, ut eius ea maiores reiciendis enim. Ea quidem obcaecati omnis modi dolores
+        voluptate iure natus consequatur sit temporibus cum cumque accusamus nulla nesciunt, quae provident eaque.
+        Perferendis quas earum nobis veritatis autem adipisci qui aspernatur nesciunt? Esse assumenda veritatis
+        laudantium rerum ullam, fugit iste eum, commodi ut placeat soluta, incidunt eaque impedit. Blanditiis quod
+        expedita possimus.
+        Magnam, tempora sequi corrupti ut nesciunt libero nostrum repudiandae quas voluptatem laudantium veniam numquam
+        fuga, porro id laboriosam rem, expedita soluta eligendi repellendus perferendis. Ea commodi ut quam dolores
+        dolorem!
+        Tempora qui reiciendis minima voluptatibus, est deserunt nam aut delectus. Soluta, cumque veritatis?
+        Reprehenderit, maxime? Sint in, et vero eligendi voluptates esse mollitia ad enim repellat, dolor iusto quia.
+        Natus.</p>
+
+      <div class="position_input">
+        <div class="section_input">
+          <label for="prenom"><img class="img_input" src="img/bg_form_message.svg" alt="prénom"></label>
+          <input type="text" id="prenom" placeholder="Ton prénom">
+        </div>
+
+        <div class="section_input">
+          <label for="mail"><img class="img_input" src="img/bg_form_mail.svg" alt="prénom"></label>
+          <input type="text" id="mail" placeholder="Ton mail">
+        </div>
+
+        <div class="section_input">
+          <label for="messages"><img class="img_input" src="img/bg_form_message.svg" alt="prénom"></label>
+          <input type="text" id="messages" placeholder="Ton messages">
+        </div>
+      </div>
+
+      <div class="buttons">
+        <button class="envoyer">Envoyer !! :-)</button>
+        <button class="effacer">Effacer... :-(</button>
+      </div>
+    </form>
+  </main>
+
+  <!-- FOOTER -->
+  <footer>
+    <img class="eden_school" src="img/logovert.png" alt="eden school">
     <p>copyright Eden School</p>
   </footer>
-  </body>
+
+  <script type="module" src="/main.js"></script>
+</body>
+
 </html>
